--- a/source/public/posts/testing-r-markdown/index.Rmd
+++ b/source/public/posts/testing-r-markdown/index.Rmd
@@ -1,31 +1,22 @@
 ---
 title: Testing R Markdown
 author: Christy Campbell
-date: '2021-03-10'
+date: '2021-03-11'
 slug: testing-r-markdown
 categories: []
 tags:
   - R
   - Markdown
   - Learning
-draft: yes
+draft: false
 ---
 
-Describe what we're going to try and do
+This is just to test out posting a blog entry as R Markdown since I've been mucking about
+with R to do some data analysis and visualisation. 
+
+This is just a simple script which basically assigns a variable named test. Here I'm setting it
+to a simple vector with a couple dummy values
 
 ```{r}
-library(ffscrapr)
+test <- c("val1", "val2")
 ```
-
-Do something here with the league connection
-
-```{r}
-league <- sleeper_connect(season = 2021, league_id = 649923060580864000)
-```
-
-```{r}
-rosters <- ff_rosters(league)
-print(rosters)
-```
-
-TODO - let's show something useful you can do with this data to look at your team
